# winit-wasm-events-repro

./: Cargo.toml  README.md  index.html
.github/workflows/: rust.yml
pkg/: wasm_input_lib.d.ts  wasm_input_lib.js  wasm_input_lib_bg.wasm  wasm_input_lib_bg.wasm.d.ts
src/: lib.rs  main.rs
